--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -5,8 +5,8 @@ deploy:
     manifests:
       - infra/k8s/*
 build:
-#  local:
-#    push: false
+  #  local:
+  #    push: false
   googleCloudBuild:
     projectId: ticketing-dev-276915
   artifacts:
@@ -17,4 +17,12 @@ build:
       sync:
         manual:
           - src: "src/**/*.ts"
+            dest: .
+    - image: us.gcr.io/ticketing-dev-276915/client
+      context: client
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "**/*.js"
             dest: .
