--- a/infra/k8s/expiration-depl.yaml
+++ b/infra/k8s/expiration-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: expiration
-          image: us.gcr.io/ticketing-dev-276915/expiration
+          image: vomilas/expiration
           env:
             - name: NATS_CLIENT_ID
               valueFrom:
