--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -3,14 +3,15 @@ kind: Config
 deploy:
   kubectl:
     manifests:
-      - infra/k8s/*
+      - ./infra/k8s/*
+      - ./infra/k8s-dev/*
 build:
   #  local:
   #    push: false
   googleCloudBuild:
     projectId: ticketing-dev-276915
   artifacts:
-    - image: us.gcr.io/ticketing-dev-276915/auth
+    - image: vomilas/auth
       context: auth
       docker:
         dockerfile: Dockerfile
@@ -18,7 +19,7 @@ build:
         manual:
           - src: "src/**/*.ts"
             dest: .
-    - image: us.gcr.io/ticketing-dev-276915/client
+    - image: vomilas/client
       context: client
       docker:
         dockerfile: Dockerfile
@@ -26,7 +27,7 @@ build:
         manual:
           - src: "**/*.js"
             dest: .
-    - image: us.gcr.io/ticketing-dev-276915/tickets
+    - image: vomilas/tickets
       context: tickets
       docker:
         dockerfile: Dockerfile
@@ -34,7 +35,7 @@ build:
         manual:
           - src: "src/**/*.ts"
             dest: .
-    - image: us.gcr.io/ticketing-dev-276915/orders
+    - image: vomilas/orders
       context: orders
       docker:
         dockerfile: Dockerfile
@@ -42,7 +43,7 @@ build:
         manual:
           - src: "src/**/*.ts"
             dest: .
-    - image: us.gcr.io/ticketing-dev-276915/expiration
+    - image: vomilas/expiration
       context: expiration
       docker:
         dockerfile: Dockerfile
@@ -50,7 +51,7 @@ build:
         manual:
           - src: "src/**/*.ts"
             dest: .
-    - image: us.gcr.io/ticketing-dev-276915/payments
+    - image: vomilas/payments
       context: payments
       docker:
         dockerfile: Dockerfile
